tests/snapshots/runtime_error_fixtures/primop_array_len_type.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_array_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
[12 of 12] Compiling  primop_array_len_type
• 1 warning • examples/runtime_errors/primop_array_len_type.flx
Warning[W034]: Legacy Builtin Helper

`array_len` is a legacy builtin helper spelling; prefer `Flow.Array.length`.

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^
  |                   --------- legacy helper spelling used here

Help:
  Import the owning Flow module and call the module-qualified API instead.

[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/primop_array_len_type.flx
error[E1004]: primop array_len expected Array, got Int

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^^^^

Stack trace:
  at main (examples/runtime_errors/primop_array_len_type.flx:2:19)
  at <main>
